# tcb-actual-playwright

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LOCAL_DEV.md  README.md  app.py  auth.py  database.py  entrypoint.sh  loop.py  main.py  models.py  pyproject.toml  requirements.txt  run_local.sh  service.py
.github/workflows/: docker.yml
frontend/src/: App.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  SettingsPage.jsx
modules/: actual.py  config.py  convert.py  exchange_rate.py  logger.py
routers/: auth.py  settings.py
